# microsandbox

./: .dockerignore  .env  .gitignore  .release-please-manifest.json  CLOUD_HOSTING.md  CONTRIBUTING.md  Cargo.toml  ENVIRONMENT_CONFIG.md  MCP.md  MSB_V_DOCKER.md  Makefile  PROJECTS.md  README.md  SELF_HOSTING.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  deny.toml  dynamic_port_mapping_test.py  mcp-design.md  release-please-config.json  start_msbserver_debug.sh  test-python-local.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/vet/: policy.yaml
.github/workflows/: audit.yml  build-example.yml  release.yml  vet-ci.yml
.kiro/steering/: structure.md
docs/: index.md  retype.manifest  retype.yml
docs/dev/: DEVELOPMENT.md  DEVELOPMENT_QUICKSTART.md  SELF_HOSTING.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md  VOLUME_SUPPORT_SUMMARY.md
docs/guides/: api-keys.md  architecture.md  getting-started.md  index.md  mcp.md  projects.md  sandboxes.md
docs/references/: api.md  cli.md  index.md  python-sdk.md  rust-sdk.md  typescript-sdk.md
mcp-server/: .env.dev  .env.example  .env.prod  .env.template  .gitignore  API_DOCUMENTATION.md  BACKGROUND_TASK_MANAGEMENT.md  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  E2E_TEST_COVERAGE.md  ENVIRONMENT_CONFIG.md  ENV_AUTO_LOADING.md  ERROR_HANDLING.md  INTEGRATION_TEST_FIXES.md  LRU_EVICTION_GUIDE.md  LRU_IMPLEMENTATION_SUMMARY.md  LRU_TEST_SUMMARY.md  MCP_TROUBLESHOOTING_GUIDE.md  ORPHAN_CLEANUP.md  README.md  README_LRU_TESTING.md  SCRIPT_SUMMARY.md  STARTUP_SCRIPTS.md  TROUBLESHOOTING_GUIDE.md  logging_usage_example.py  quick_lru_test.py  requirements.txt  run_integration_tests.sh  run_lru_tests.sh  run_mcp_integration_tests.sh  setup.py  start_mcp_dev.sh  test_config_management.py  test_environment_setup.sh  test_error_handling.py  test_execute_command.py  test_lru_basic.py  test_lru_eviction.py  test_main_wrapper.py  test_mcp_client_sdk.py  (+6 more)
mcp-server/examples/: README.md  advanced_usage.py  basic_usage.py  lru_eviction_example.py  simplified_command_examples.py
mcp-server/integration_tests/: __init__.py  conftest.py  test_auxiliary_methods.py  test_background_task_management.py  test_end_to_end_functionality.py  test_error_scenarios.py  test_error_scenarios_final.py  test_error_scenarios_simple.py  test_integration_environment.py  test_logging_integration.py  test_lru_eviction_e2e.py  test_mcp_lru_eviction_e2e.py  test_mcp_lru_stdio_e2e.py  test_mcp_server_integration.py  test_orphan_simple.py  test_rpc_integration.py  test_session_management_integration.py  test_wrapper_basic.py
mcp-server/mcp_server/: __init__.py  main.py  main_sdk.py  server.py  server_sdk.py
mcp-server/microsandbox_wrapper/: __init__.py  config.py  exceptions.py  logging_config.py  models.py  resource_manager.py  session_manager.py  wrapper.py
mcp-server/tests/: __init__.py  test_config.py  test_error_handling.py  test_jsonrpc.py  test_lru_eviction.py  test_protocol_compliance.py  test_tools.py
microsandbox-cli/: Cargo.toml
microsandbox-cli/lib/: error.rs  lib.rs  styles.rs
microsandbox-cli/lib/args/: mod.rs  msb.rs  msbrun.rs  msbserver.rs
microsandbox-core/: CHANGELOG.md  Cargo.toml  README.md
microsandbox-core/lib/: error.rs  lib.rs  models.rs
microsandbox-core/lib/cli/args/: microsandbox.rs  mod.rs  msb.rs  msbrun.rs
microsandbox-core/lib/config/: defaults.rs  env_pair.rs  mod.rs  path_pair.rs  path_segment.rs  port_pair.rs  reference_path.rs
microsandbox-core/lib/config/microsandbox/: builder.rs  config.rs
microsandbox-core/lib/management/: config.rs  db.rs  home.rs  image.rs  menv.rs  mod.rs  orchestra.rs  rootfs.rs  sandbox.rs  server.rs  toolchain.rs
microsandbox-core/lib/migrations/oci/: 20250128014904_create_layers.down.sql  20250128014904_create_layers.up.sql  20250128014905_create_manifest_layers.down.sql  20250128014905_create_manifest_layers.up.sql
microsandbox-core/lib/migrations/sandbox/: 20250128014851_create_sandbox_metrics.up.sql
microsandbox-core/lib/oci/: reference.rs
microsandbox-core/lib/oci/implementations/: docker.rs
microsandbox-core/lib/runtime/: mod.rs  monitor.rs
microsandbox-core/lib/server/: api.rs  mod.rs
microsandbox-core/lib/utils/: conversion.rs  env.rs  file.rs  mod.rs  path.rs  viz.rs
microsandbox-core/lib/vm/: builder.rs  errors.rs  rlimit.rs  vm.rs
microsandbox-core/tests/cli/: init.rs
microsandbox-portal/: Cargo.toml
microsandbox-portal/examples/: repl.rs  repl_timer.rs  rpc_command.rs  rpc_repl.rs
microsandbox-portal/lib/: error.rs  handler.rs  lib.rs  payload.rs  route.rs  state.rs
microsandbox-portal/lib/portal/: command.rs  fs.rs  mod.rs
microsandbox-portal/lib/portal/repl/: engine.rs  mod.rs  nodejs.rs  python.rs  rust.rs  types.rs
microsandbox-server/: Cargo.toml
microsandbox-server/lib/: config.rs  error.rs  handler.rs  lib.rs  management.rs  mcp.rs  mcp_tests.rs  middleware.rs  payload.rs  port.rs  route.rs  simplified_mcp.rs  simplified_mcp_integration_tests.rs  state.rs
microsandbox-utils/: Cargo.toml  README.md
microsandbox-utils/lib/: defaults.rs  env.rs  error.rs  lib.rs  path.rs  seekable.rs  term.rs
microsandbox-utils/lib/config/: mod.rs
microsandbox-utils/lib/log/: mod.rs  rotating.rs
microsandbox-utils/lib/runtime/: mod.rs  monitor.rs  supervisor.rs
scripts/: build_libkrun.sh  build_sdk_images.sh  ci_build.sh  install_microsandbox.sh  install_monocore.sh  package_microsandbox.sh  publish_crates.sh  publish_sdk_images.sh  setup_dev_env.sh
scripts/aliases/: msi  msr  msx
sdk/: README.md
sdk-images/node/: Dockerfile  README.md
sdk-images/nodejs/: Dockerfile  README.md
sdk-images/python/: Dockerfile  Dockerfile.local  README.md  rebuild.sh
sdk-images/rust/: Dockerfile  README.md
sdk/cpp/: DEVELOPMENT.md  README.md  conanfile.py
sdk/crystal/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  shard.yml
sdk/csharp/: .gitignore  DEVELOPMENT.md  Microsandbox.sln  README.md
sdk/dart/: .gitignore  DEVELOPMENT.md  LICENSE  README.md  (+1 more)
tmp/: host_file.txt  registries.conf
(+134 files in other folders)
