[package]
name = "microsandbox-cli"
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "msb"
path = "bin/msb/main.rs"

[[bin]]
name = "msbrun"
path = "bin/msbrun.rs"

[[bin]]
name = "msbserver"
path = "bin/msbserver.rs"

[lib]
name = "microsandbox_cli"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
microsandbox-core = { version = "0.1.0", path = "../microsandbox-core", features = [
    "cli",
] }
microsandbox-server = { version = "0.1.0", path = "../microsandbox-server", features = [
    "cli",
] }
microsandbox-utils = { version = "0.1.0", path = "../microsandbox-utils" }
clap.workspace = true
typed-path.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
which = "7.0"
console.workspace = true
pretty-error-debug.workspace = true
thiserror.workspace = true
tower-http.workspace = true
atty.workspace = true

[dev-dependencies]
serial_test = "3.2.0"
