[package]
name = "microsandbox-core"
description = "`microsandbox-core` is a tool for managing lightweight sandboxes and images."
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_core"
path = "lib/lib.rs"

[[test]]
name = "integration_cli"
path = "tests/cli/mod.rs"
harness = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["serde"] }
criterion.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures.workspace = true
getset.workspace = true
hex.workspace = true
libc.workspace = true
oci-spec = { version = "0.8" }
procspawn = { workspace = true, features = ["test-support"] }
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
signal-hook = "0.3.17"
structstruck.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
typed-builder.workspace = true
typed-path.workspace = true
uuid.workspace = true
xattr.workspace = true
sysinfo = "0.34"
regex.workspace = true
psutil = "3.3.0"
nix = { workspace = true, features = [
    "mount",
    "user",
    "fs",
    "process",
    "term",
    "signal",
] }
tar = "0.4"
flate2 = "1.0"
walkdir = "2.4"
scopeguard = "1.2"
tokio-stream = { version = "0.1.17", features = ["fs"] }
pretty-error-debug.workspace = true
serde_yaml.workspace = true
async-stream.workspace = true
pin-project = "1.1.7"
tracing-appender = "0.2.3"
pin-project-lite = "0.2.15"
semver = { version = "1.0.24", features = ["serde"] }
bon = "3.3.0"
ipnetwork = { version = "0.21.0", features = ["serde"] }
sqlx.workspace = true
microsandbox-utils.workspace = true
async-recursion.workspace = true
file-lock = "2.1.11"
nondestructive = { version = "0.0.26", features = ["serde"] }
jsonwebtoken = "9.3.1"
rand.workspace = true
indicatif = { workspace = true, optional = true }
console.workspace = true
which = "7.0"
crossterm.workspace = true
atty.workspace = true
once_cell = "1.18"

[dev-dependencies]
test-log.workspace = true
criterion.workspace = true
serial_test = "3.2.0"

[features]
default = []
cli = ["indicatif"]
