[package]
name = "microsandbox-server"
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
tower.workspace = true
tower-http.workspace = true
axum.workspace = true
anyhow.workspace = true
base64.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
getset.workspace = true
thiserror.workspace = true
pretty-error-debug.workspace = true
clap.workspace = true
indicatif = { workspace = true, optional = true }
console = { workspace = true, optional = true }
microsandbox-utils.workspace = true
libc.workspace = true
rand.workspace = true
reqwest.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
microsandbox-core.workspace = true
once_cell.workspace = true

[features]
default = []
cli = ["indicatif", "console"]
