[package]
name = "microsandbox-server"
description = "`microsandbox-server` implements the sandbox server responsible for orchestrating sandboxes."
authors.workspace = true
repository.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "lib/lib.rs"

[dependencies]
tower.workspace = true
axum = { workspace = true, features = ["macros"] }
anyhow.workspace = true
base64.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-util.workspace = true
getset.workspace = true
thiserror.workspace = true
pretty-error-debug.workspace = true
indicatif = { workspace = true, optional = true }
console = { workspace = true, optional = true }
microsandbox-utils.workspace = true
libc.workspace = true
rand.workspace = true
reqwest.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
microsandbox-core.workspace = true
once_cell.workspace = true

[features]
default = []
cli = ["indicatif", "console"]
