[package]
name = "microsandbox-utils"
version = "0.2.1"
description = "`microsandbox-utils` is a library containing general utilities for the microsandbox project."
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "microsandbox_utils"
path = "lib/lib.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
typed-path.workspace = true
pretty-error-debug.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
async-trait.workspace = true
nix = { workspace = true, features = ["process", "signal", "term", "fs"] }
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
